css/media.css
@media all and (max-width: 900px){
  /* Nav for Mobile */
  .navbar .list-items{
    margin-right: 0;
    float: left;
  }

  .navbar .site-name{
    width: 100%;
    padding-left: 30px;
  }

  .navbar .list-items .items,
  .navbar .list-items .dropdown-items .dropdown-list{
    display: block;
    width: 100vw;
  }
  
  /* Sets layout of mobile navbar */
  .navbar .list-items .dropdown-items{
    top: 70px;
    position: static;
    border-top: none;
    float: none;
    display: none;
    opacity: 1;
    visibility: visible;
  }

  .show{
    display: block;
    color: white;
    font-size: 18px;
    padding: 0 20px;
    line-height: 70px;
    cursor: pointer;
  }

  .show:hover{
    color: cyan;
  }

  .icon{
    display: block;
    color: white;
    position: absolute;
    right: 40px;
    line-height: 70px;
    font-size: 25px;
    cursor: pointer;
  }
  nav ul li a:hover{
    box-shadow: none;
  }
  .show + a, .list-items{
    display: none;
  }

  #btn-nav:checked + .list-items,
  #btn-moto:checked + .dropdown-items,
  #btn-gear:checked + .dropdown-items,
  #btn-acc:checked + .dropdown-items
  {
    display: block;
  }
  /* Moto Section Styles */

  .zoomies{
    grid-row: 1;
    grid-column: 2 / 4;
  }

  .moto-moto{
    grid-template-columns: 2fr 3fr 3fr 2fr;
  }

  .old-men{
    grid-row: 3;
    grid-column: 2;
  }

  .traveler{
    grid-row: 3;
    grid-column: 3;
  }

  .fast-travel{
    grid-row: 4;
    grid-column: 2;
  }

  .enduro{
    grid-row: 4;
    grid-column: 3;
  }
  
  .off-roady{
    grid-row: 5;
    grid-column: 2;
  }

  .elderly{
    grid-row: 5;
    grid-column: 3;
  }

  /* Gear Styles */

  .gear-content{
    height: 60vh;
  }
  .gear-items{
    grid-template-rows: repeat(6, 1fr);
    grid-template-columns: repeat(6, 1fr);
  }

  .gear-head{
    grid-column: 1 / 7;
    box-sizing: border-box;
    background: var(--card-faded);
    color: var(--text-color);
  }

  .moto-helm{
    grid-area: 2 / 3;
  }

  .moto-glove{
    grid-area: 2/ 4;
  }

  .moto-jack{
    grid-area: 3/3;
  }

  .moto-pant{
    grid-area: 3/4;
  }
  .moto-boot{
    grid-area: 4 / 3;
  }

  .ad{
    grid-row: 5;
    grid-column: 1 / span 6;
  }

  /* Accessory Section */
  .accessory-content{
    height: 50vh;
  }

  .accessory-items{
    grid-template-columns: 1fr repeat(2, 2fr) 1fr;
    grid-template-rows: 1fr repeat(3, 2fr) 1fr;
  }

  .comms{
    grid-row: 3;
    grid-column: 2;
  }
  .maint{
    grid-row: 3;
    grid-column: 3;
  }
  .more{
    grid-row: 5;
  }

  /* Footer Section */
  .map{
    width: 100%;
  }

}

